--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="D:\Новая папка\Yaresky School\Logo.png"><br><img id="loader" src="D:\Новая папка\Yaresky School\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="D:\Новая папка\Yaresky School\powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="blob/main/images/Logo.png"><br><img id="loader" src="blob/main/images/Loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="blob/main/images/powered.svg">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
