--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     
     <header><div id="header"></div>
-        <img id="logo" src ="D:\Новая папка\Yaresky School\Logo.png"></a>
+        <img id="logo" src ="images/Logo.png"></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
                 <button><em><a href="Aboutschool.html">Про Школу</em></a></button>
