--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="D:\Новая папка\Yaresky School\Logo.png" type="image/jpg">
+    <link rel="shortcut icon" href="images/Logo.png" type="image/jpg">
     <link rel="stylesheet" href="style.css">
     <title>Yaresky School</title>
 </head>
