--- a/Teachingstaff.html
+++ b/Teachingstaff.html
@@ -27,7 +27,7 @@
     
         
     <header><div id="header"></div>
-       <a href="index.html"><img id="logo" src ="D:\Новая папка\Yaresky School\Logo.png"></a></a>
+       <a href="index.html"><img id="logo" src ="images/Logo.png"></a></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
                 <button><em><a href="Aboutschool.html">Про Школу</em></a></button>
