--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content= "Yaresky School" />
     <meta name="robots" content= "index, follow">
+    <meta name="google-site-verification" content="Wrt4HLXQqDx4s1Mgwnp3tL0-c-r_l_xrJdYcrVfX0i0" />
     <meta name="keywords" content="Yaresky School,ОПОРНИЙ ЗАКЛАД ЯРЕСЬКІВСЬКА ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ ІМ.Ф.П.БОРІДЬКА,Яреськівська ЗОШ">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
