--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="images/Logo.png"><br><img id="loader" src="images/Loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images/powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="images/Logo.png" alt="Loader"><br><img id="loader" src="images/Loader.gif" alt="Loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images/powered.svg" alt="Powered">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
-        <img id="logo" src ="images/Logo.png"></a>
+        <img id="logo" src ="images/Logo.png" alt="logo" ></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
                 <button><em><a href="Aboutschool.html">Про Школу</em></a></button>
