--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content= "Yaresky School" />
+    <meta name="description" content= "Yaresky School""Вперед за знаннями" />
     <meta name="robots" content= "index, follow">
     <meta name="google-site-verification" content="Wrt4HLXQqDx4s1Mgwnp3tL0-c-r_l_xrJdYcrVfX0i0" />
     <meta name="keywords" content="Yaresky School,ОПОРНИЙ ЗАКЛАД ЯРЕСЬКІВСЬКА ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ ІМ.Ф.П.БОРІДЬКА,Яреськівська ЗОШ">
