--- a/gurtok.html
+++ b/gurtok.html
@@ -22,17 +22,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="D:\Новая папка\Yaresky School\Logo.png" type="image/jpg">
+    <link rel="shortcut icon" href="images\Logo.png" type="image/jpg">
     <link rel="stylesheet" href="style.css">
     <title>Yaresky School</title>
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="D:\Новая папка\Yaresky School\Logo.png"><br><img id="loader" src="D:\Новая папка\Yaresky School\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="D:\Новая папка\Yaresky School\powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
-        <img id="logo" src ="D:\Новая папка\Yaresky School\Logo.png"></a>
+        <img id="logo" src ="images\Logo.png"></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
                 <button><em><a href="Aboutschool.html">Про Школу</em></a></button>
