--- a/forpupils.html
+++ b/forpupils.html
@@ -28,7 +28,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\Loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
