--- a/historyofschool.html
+++ b/historyofschool.html
@@ -38,7 +38,7 @@
         <p>
             Першу початкову школу в Яреськах було відкрито у <b>1870</b> році.<br>
 
-У <b>1908</b> році Миргородське земство відкрило двокласну школу, у якій навчалося 120 – 150 учнів, переважно хлопців.<br> Школа готувала кадри писарчуків та конторників для поміщиків.<br> Паралельно працювала також і початкова школа. Так два навчальні заклади в Яреськах існували до 1920 року.<br></br> Тоді, згідно з декретом уряду,було створено єдину трудову семирічну школу, яка за 15 років свого існування підготувала більше 500 учнів.<br><br><img src="images/DSCN0171.jpg"><br></br> <b>У 1935 році</b> семирічку було реорганізовано в середню школу.
+У <b>1908</b> році Миргородське земство відкрило двокласну школу, у якій навчалося 120 – 150 учнів, переважно хлопців.<br> Школа готувала кадри писарчуків та конторників для поміщиків.<br> Паралельно працювала також і початкова школа. Так два навчальні заклади в Яреськах існували до 1920 року.<br></br> Тоді, згідно з декретом уряду,було створено єдину трудову семирічну школу, яка за 15 років свого існування підготувала більше 500 учнів.<br><br><img src="images/DSCN0171.JPG"><br></br> <b>У 1935 році</b> семирічку було реорганізовано в середню школу.
 
 <br>До початку Великої Вітчизняної війни школа містилася в п’яти приміщеннях.<br> Головним корпусом був колишній будинок поміщика Д. П. Трощинського, у якому провела дитинство і юність мати М. В. Гоголя Марія Іванівна Косяровська.<br> До війни школа мала 18 класів, кількість учнів зросла до шестисот, працювало двадцять дев’ять учителів.<br>
 
