--- a/forpupils.html
+++ b/forpupils.html
@@ -35,8 +35,8 @@
         <a href="index.html"><img id="logo" src ="images\Logo.png"></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
-                <button><em><a href="Aboutschool.html">Про Школу</em></a></button>
-                <button><em><a href="forpupils.html"></a>Учням</em></button>
+                <button id="header"><em><a href="Aboutschool.html">Про Школу</em></a></button>
+                <button id="header"><em><a href="forpupils.html"></a>Учням</em></button>
             </div></h1></em>
            
         </div>
