--- a/forpupils.html
+++ b/forpupils.html
@@ -49,7 +49,7 @@
         <div>
            <h2>Розклад дзвінків</h2> 
               <p></p>
-               <button id="newsbutton"><a href="historyofschool.html">Далі</button></p></a>
+               <button id="newsbuttons"><a href="historyofschool.html">Далі</button></p></a>
         </div>
         
     </div>
@@ -57,7 +57,7 @@
        <div>
            <h2>Розклад</h2> 
               <p></p>
-               <button id="newsbutton"><a href="Symbol of the school.html">Далі</button></p></a>
+               <button id="newsbuttons"><a href="Symbol of the school.html">Далі</button></p></a>
         </div>
         
     </div>
@@ -67,14 +67,14 @@
        <div>
            <h2>Гуртки</h2> 
               <p> </p>
-               <button id="newsbutton"><a href="gurtok.html">Далі</button></a></p>
+               <button id="newsbuttons"><a href="gurtok.html">Далі</button></a></p>
         </div>
     </div>
     <div id="mainnews">
         <div>
             <h2>Контакти</h2> 
                <p> </p>
-                <button id="newsbutton"><a href="Teachingstaff.html">Далі</button></a></p>
+                <button id="newsbuttons"><a href="Teachingstaff.html">Далі</button></a></p>
          </div>
 </div>
 </div>
