--- a/Teachingstaff.html
+++ b/Teachingstaff.html
@@ -30,8 +30,8 @@
        <a href="index.html"><img id="logo" src ="images\Logo.png"></a></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
-                <button><em><a href="Aboutschool.html">Про Школу</em></a></button>
-                <button><em>Учням</em></button>
+                <button id="header"><em><a href="Aboutschool.html">Про Школу</em></a></button>
+                <button id="header"><em>Учням</em></button>
            
             </div>
     
