--- a/Teachingstaff.html
+++ b/Teachingstaff.html
@@ -26,7 +26,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\loader.gif"><br><p id="Abreviation">ЯЗШ<br></p><br><p id="textpreloader">Powered by Anatoliy Dryapak</p></div>
+    <div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\Loader.gif"><br><p id="Abreviation">ЯЗШ<br></p><br><p id="textpreloader">Powered by Anatoliy Dryapak</p></div>
     
         
     <header><div id="header"></div>
