--- a/News.html
+++ b/News.html
@@ -66,7 +66,7 @@
          
     </div>
  <div id="grid">
-            <h2>19 січня у 3-Б класі (класний керівник Наталія Лейко) було проведено виховний захід на тему: «Водохреща – звичаї та традиції українців». /h2> 
+            <h2>19 січня у 3-Б класі (класний керівник Наталія Лейко) було проведено виховний захід на тему: «Водохреща – звичаї та традиції українців». </h2> 
                <p>  Діти ознайомились з особливостями свята. Вмилися свяченою водою, скуштували куті, заспівали пісень…
    Такі заходи вчать поважати традиції та звичаї українського народу і виховують справжніх патріотів України.</p>
                 <div id="nextbutton"><button id="next">Далі</button></p></a></div>
@@ -74,7 +74,7 @@
          
     </div>
     <div id="grid">
-            <h2>Новорічного дива чекають всі діти України… Тому сьогодні в нашій школі гамірно, бо у нас Новорічне свято! /h2> 
+            <h2>Новорічного дива чекають всі діти України… Тому сьогодні в нашій школі гамірно, бо у нас Новорічне свято! </h2> 
                <p>  У кожному класі із самого ранку для дітей було організовано проведення святкових виховних годин. Біля шкільної ялинки учнів початкової школи розважали новорічні ельфи та подарували солодощі, якими забезпечив відділ освіти Шишацької селищної ради.  
     Сьогодні всі намагалися хоч на хвильку забути про жахи війни… І також всі загадали новорічне бажання – ПЕРЕМОГИ УКРАЇНІ!</p>
                 <div id="nextbutton"><button id="next">Далі</button></p></a></div>
