--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="D:\Новая папка\Yaresky School\Logo.png"><br><img id="loader" src="D:\Новая папка\Yaresky School\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="D:\Новая папка\Yaresky School\powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
-        <img id="logo" src ="D:\Новая папка\Yaresky School\Logo.png"></a>
+        <img id="logo" src ="images\Logo.png"></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
                 <button id="header"><em><a href="Aboutschool.html">Про Школу</em></a></button>
@@ -147,8 +147,8 @@
 
 </body>
 <footer>
-    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="D:\Новая папка\Yaresky School\mail.svg"></a>
-    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="D:\Новая папка\Yaresky School\social-facebook-svgrepo-com.svg"></a> 
+    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="images\mail.svg"></a>
+    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="images\social-facebook-svgrepo-com.svg"></a> 
  <em><br>© 2023 All rights resevered<br></div>
     </em> 
 </footer>   
