--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
     
-    <link rel="shortcut icon" href="D:\Новая папка\Yaresky School\Logo.png" type="image/jpg">
+    <link rel="shortcut icon" href="images\Logo.png" type="image/jpg">
    
    
     <title>Yaresky School</title> 
@@ -37,7 +37,7 @@
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\Loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
