--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </body>
 <footer>
     <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="images\mail.svg"></a>
-    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="images\social-facebook-svgrepo-com.svg"></a> 
+    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="images\facebook.svg"></a> 
  <em><br>© 2023 All rights resevered<br></div>
     </em> 
 </footer>   
