--- a/forpupils.html
+++ b/forpupils.html
@@ -22,17 +22,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images\Logo.png" type="image/jpg">
+    <link rel="shortcut icon" href="D:\Новая папка\Yaresky School\Logo.png" type="image/jpg">
     <link rel="stylesheet" href="style.css">
     <title>Yaresky School</title>
+    
 </head>
 <body>
     <script src="script.js"></script>
-<div id="preloader" class="visible"><img id="loader"src="images\Logo.png"><br><img id="loader" src="images\Loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="images\powered.svg">Powered by Anatoliy Dryapak</p></div>
+<div id="preloader" class="visible"><img id="loader"src="D:\Новая папка\Yaresky School\Logo.png"><br><img id="loader" src="D:\Новая папка\Yaresky School\loader.gif"><br></p><br><p id="textpreloader"><img id="powered" src="D:\Новая папка\Yaresky School\powered.svg">Powered by Anatoliy Dryapak</p></div>
 
     
     <header><div id="header"></div>
-        <a href="index.html"><img id="logo" src ="images\Logo.png"></a>
+        <a href="index.html"><img id="logo" src ="D:\Новая папка\Yaresky School\Logo.png"></a>
         <h1><em>ОПОРНИЙ ЗАКЛАД "ЯРЕСЬКІВСЬКА<br>ЗАГАЛЬНООСВІТНЯ ШКОЛА І-ІІІ СТУПЕНІВ <br> ІМ.Ф.П.БОРІДЬКА"
             <div id="menu">
                 <button id="header"><em><a href="Aboutschool.html">Про Школу</em></a></button>
@@ -77,4 +78,24 @@
                 <button id="newsbuttons"><a href="Teachingstaff.html">Далі</button></a></p>
          </div>
 </div>
+<div id="other">
+    <button id="other">Профорієнтація</p>
+    <button id="other">Підприємництво для школярів</p>
+    <button id="other">Правило внутрішнього порядку</p>
+    <button id="other">Правила інтернет-безпеки</p>
+    <button id="other">ЗНО</p>
+    <button id="other">Рекомендація учням щодо запобіганню коронавірусу</p>
+    <button id="other">Національна дитяча гаряча лінія</p>
+    <button id="other">Попередження домашнього насильства</p>
+    <button id="other">Контактні дані служб у справах дітей</p>
+    <button id="other">Ваш ювеніальний інспектор</p>
+    <button id="other">Памятка "Увага сказ"</p>
+    <button id="other">Дистанційне навчання</button>
 </div>
+</div>
+<footer>
+    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="D:\Новая папка\Yaresky School\mail.svg"></a>
+    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="D:\Новая папка\Yaresky School\social-facebook-svgrepo-com.svg"></a> 
+ <em><br>© 2023 All rights resevered<br></div>
+    </em> 
+</footer>   
