--- a/Aboutschool.html
+++ b/Aboutschool.html
@@ -69,8 +69,8 @@
     <button id="other">Наша гордість</p>
 </div>
 <footer>
-    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="D:\Новая папка\Yaresky School\mail.svg"></a>
-    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="D:\Новая папка\Yaresky School\social-facebook-svgrepo-com.svg"></a> 
+    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="images\mail.svg"></a>
+    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="images\facebook.svg"></a> 
  <em><br>© 2023 All rights resevered<br></div>
     </em> 
 </footer>   
