--- a/forpupils.html
+++ b/forpupils.html
@@ -94,8 +94,8 @@
 </div>
 </div>
 <footer>
-    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="D:\Новая папка\Yaresky School\mail.svg"></a>
-    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="D:\Новая папка\Yaresky School\social-facebook-svgrepo-com.svg"></a> 
+    <a href="mailto:yareskyschool@ukr.net"><img id="footer" src="images\mail.svg"></a>
+    <a href="https://www.facebook.com/yareskyschool66"><img id="footer" src="images\facebook.svg"></a> 
  <em><br>© 2023 All rights resevered<br></div>
     </em> 
 </footer>   
